--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
 body {
   background: #cccccc;
 }
+h1 {
+  text-align: center;
+}
 p {
   text-align: center;
+}
+#missao {
+  font-size: 20px;
 }
 em strong {
   color: red;
