--- a/style.css
+++ b/style.css
@@ -3,8 +3,12 @@ body {
 }
 h1 {
   text-align: center;
+}
 #banner {
   width: 100%;
+}
+.principal {
+  background: #ffffff;
 }
 p {
   text-align: center;
@@ -14,4 +18,10 @@ p {
 }
 em strong {
   color: red;
+}
+.itens {
+  font-style: italic;
+}
+.beneficios {
+  background: #ffffff;
 }
