--- a/produtos.css
+++ b/produtos.css
@@ -65,3 +65,13 @@ font-size: 22px;
 font-weight: bold;
 margin-top: 10px;
 }
+footer {
+    text-align: center;
+    background: url("imagens/bg.jpg");
+    padding: 40px 0;
+}
+.copyright {
+    color: #FFFFFF;
+    font-size: 13px;
+    margin: 20px 0 0;
+}
