--- a/style.css
+++ b/style.css
@@ -4,21 +4,37 @@
 .titulo-principal {
   padding-left: 20px;
 }
+h2 {
+  font-weight:bold;
+  font-size: 30px ;
+  margin-bottom: 30px;
+}
+em {
+  font-style: italic;
+}
+strong {
+  font-weight: bold;
+}
 #banner {
   width: 100%;
 }
 .principal {
   background: #cccccc;
-  padding: 30px;
+  padding: 10px 30px 30px 30px;
 }
 p {
   text-align: center;
+  margin: 10px 0;
 }
 #missao {
   font-size: 20px;
 }
 em strong {
   color: red;
+}
+h3{
+  font-weight:bold;
+  font-size: 20px ;
 }
 .itens {
   font-style: italic;
@@ -27,7 +43,7 @@ em strong {
   background: #ffffff;
   padding: 20px;
 }
-ul {
+.lista-beneficios {
   display: inline-block;
   vertical-align: top;
   width: 20%;
