fiz outra feature aqui

--- a/style.css
+++ b/style.css
@@ -1,54 +1,95 @@
-.titulo-centralizado {
-  text-align: center;
+header {
+    background: #BBBBBB;
+    padding: 20px 0;
 }
-.titulo-principal {
-  padding-left: 20px;
+.caixa {
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
 }
-h2 {
-  font-weight:bold;
-  font-size: 30px ;
-  margin-bottom: 30px;
+nav {
+    position: absolute;
+    top: 110px;
+    right: 0;
 }
-em {
-  font-style: italic;
+nav li{
+    display: inline;
+    margin:  0 0 0 15px;
 }
-strong {
-  font-weight: bold;
+nav a {
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
 }
-#banner {
-  width: 100%;
+nav a:hover{
+    color: #c78c19;
+    text-decoration: underline;
 }
-.principal {
-  background: #cccccc;
-  padding: 10px 30px 30px 30px;
+.produtos {
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
 }
-p {
-  text-align: center;
-  margin: 10px 0;
+.produtos li{
+   display: inline-block;
+   text-align: center;
+   width: 30%;
+   vertical-align: top;
+   margin: 0 1.5%;
+   padding: 30px 20px;
+   box-sizing: border-box;
+   border: 2px solid #000000;
+   border-radius: 10px
 }
-#missao {
-  font-size: 20px;
+.produtos li:hover{
+    border-color: #c78c19;
 }
-em strong {
-  color: red;
+.produtos li:active{
+border-color: green;
 }
-h3{
-  font-weight:bold;
-  font-size: 20px ;
+.produtos li:hover h2{
+    font-size: 34px;
 }
-.itens {
-  font-style: italic;
+.produtos h2 {
+    font-size: 30px;
+    font-weight: bold;
 }
-.beneficios {
-  background: #ffffff;
-  padding: 20px;
+
+.produto-descricao{
+    font-size: 18;
 }
-.lista-beneficios {
-  display: inline-block;
-  vertical-align: top;
-  width: 20%;
-  margin-right: 15%;
+.produto-preco {
+font-size: 22px;
+font-weight: bold;
+margin-top: 10px;
 }
-.imgbnfc {
-  width: 50%;
+footer {
+    text-align: center;
+    background: url("imagens/bg.jpg");
+    padding: 40px 0;
+}
+.copyright {
+    color: #FFFFFF;
+    font-size: 13px;
+    margin: 20px 0 0;
+}
+main {
+    width: 940px;
+    margin: 0 auto;
+}
+form {
+    margin: 40px 0;
+}
+form label {
+    display: block;
+    font-size: 20px;
+    margin: 0 0 10px;
+}
+form input {
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
+    width: 50%;
 }
